# sema

./: .editorconfig  .git-blame-ignore-revs  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.docs-search-gate  Jakefile  Makefile  README.md  codecov.yml  package-lock.json  package.json  sema.toml
crates/sema/: Cargo.toml  build.rs
crates/sema-core/: Cargo.toml
crates/sema-core/src/: archive.rs  async_signal.rs  context.rs  cycle.rs  error.rs  io_backend.rs  json.rs  lib.rs  mcp_cassette.rs  mutable_ops.rs  net.rs  number.rs  os_sandbox.rs  output_hook.rs  value.rs  vfs.rs
crates/sema-core/src/runtime/: cancel.rs  completion.rs  eval_task_context.rs  executor.rs  ids.rs  mod.rs  native.rs  resource.rs  settlement.rs  task_context.rs  trace.rs
crates/sema-core/tests/: number_props.rs  runtime_completion_test.rs  runtime_types_test.rs
crates/sema-docs/: Cargo.toml  builtin_docs.generated.json
crates/sema-docs/entries/special-forms/: -to-.md  -to-gt.md  and.md  as-to-.md  async.md  await.md  begin.md  case.md  cond.md  def.md  defagent.md  define-values.md  define.md  defmacro.md  defmethod.md  defmulti.md  defn.md  deftool.md  defun.md  delay.md  do.md  dotimes.md  eval.md  export.md  fn.md  for-filter.md  for-fold.md  for-list.md  for-map.md  for-range.md  for.md  force.md  guard.md  if-let.md  if.md  import.md  lambda.md  let-star-values.md  let-star.md  let-values.md  (+21 more)
crates/sema-docs/src/: lib.rs  main.rs
crates/sema-docs/tests/: entry_tests.rs
crates/sema-eval/: Cargo.toml
crates/sema-eval/src/: debug_session.rs  eval.rs  lib.rs  prelude.rs  special_forms.rs  syntax_rules.rs
crates/sema-io/: Cargo.toml
crates/sema-io/src/: executor.rs  lib.rs
crates/sema-io/tests/: runtime_boundary_test.rs  tokio_pin_test.rs
crates/sema-llm/: Cargo.toml
crates/sema-llm/src/: anthropic.rs  builtins.rs  cassette.rs  embeddings.rs  fake.rs  gemini.rs  http.rs  lib.rs  ollama.rs  openai.rs  pricing.rs  provider.rs  types.rs
crates/sema-mcp/: Cargo.toml
crates/sema-mcp/src/: builtin_docs.rs  builtins.rs  client.rs  client_auth.rs  docs_search.rs  lib.rs  notebook.rs  protocol.rs  server.rs  tools.rs
crates/sema-mcp/src/oauth/: device.rs  flow.rs  login.rs  loopback.rs  mod.rs  scoped.rs
crates/sema-mcp/tests/: mcp_allowed_tools_test.rs  mcp_client_test.rs  mcp_connect_from_config_test.rs  mcp_legacy_sse_test.rs  mcp_oauth_device_test.rs  mcp_oauth_refresh_test.rs  mcp_oauth_stepup_test.rs  mcp_test.rs
crates/sema-notebook/: Cargo.toml
crates/sema-notebook/src/: engine.rs  server.rs  ui.rs
crates/sema-notebook/src/ui/: index.html  notebook.js  style.css
crates/sema-notebook/tests/: assets_test.rs
crates/sema-notebook/tests/e2e/: notebook.spec.ts  playwright.config.ts
crates/sema-reader/: Cargo.toml
crates/sema-reader/src/: lexer.rs  reader.rs
crates/sema-stdlib/: Cargo.toml
crates/sema-stdlib/src/: archive.rs  arithmetic.rs  async_ops.rs  bitwise.rs  bytevector.rs  comparison.rs  context.rs  crypto.rs  csv_ops.rs  datetime.rs  diff.rs  event.rs  fs_watch.rs  git.rs  http.rs  io.rs  kv.rs  lib.rs  list.rs  map.rs  markup.rs  math.rs  meta.rs  mutable.rs  otel.rs  pdf.rs  predicates.rs  proc.rs  pty.rs  reflect.rs  runtime_offload.rs  secret.rs  serial.rs  server.rs  sqlite.rs  stream.rs  string.rs  system.rs  terminal.rs  typed_array.rs  (+4 more)
crates/sema-vm/: Cargo.toml
crates/sema-vm/benches/: runtime_micro.rs
crates/sema-vm/src/: compiler.rs  core_expr.rs  debug.rs  disasm.rs  emit.rs  lib.rs  lower.rs  opcodes.rs  optimize.rs  resolve.rs  restricted.rs  scheduler.rs  serialize.rs  vm.rs
crates/sema-vm/src/runtime/: channel.rs  drive.rs  host.rs  host_api.rs  mod.rs  promise.rs  ready.rs  resource_gate.rs  root.rs  runtime.rs  state.rs  task.rs  tests.rs  timer.rs  wait.rs
crates/sema-vm/tests/: bytecode_validator_regression.rs
crates/sema-wasm/: Cargo.toml
crates/sema-wasm/src/: driver.rs  lib.rs  output.rs
crates/sema/src/: cross_compile.rs  docs.rs  import_tracer.rs  lib.rs  main.rs  pkg.rs  update.rs  web_prelude.sema  workflow_check.rs  workflow_mcp.rs  workflow_view.rs
crates/sema/src/repl/: apropos.rs  commands.rs  disasm.rs  headless.rs  highlighter.rs  mod.rs
crates/sema/src/web/: dev_server.sema  mod.rs  runtime.rs  shell.html
crates/sema/src/workflow_view/: auth.rs  connect.rs  index.html  ingest.rs
crates/sema/tests/: agent_async_breaker_test.rs  agent_async_test.rs  agent_runtime_test.rs  archive_pdf_patch_async_test.rs  async_span_nesting_test.rs  batch_rerank_async_test.rs  cli_ctrlc_test.rs  collection_callback_async_test.rs  compile_result_root_test.rs  complete_async_test.rs  continuation_scope_isolation_test.rs  conversation_callback_async_test.rs  dap_async_breakpoint_test.rs  db_async_test.rs  dual_eval_collections_test.rs  dual_eval_core_test.rs  dual_eval_data_test.rs  dual_eval_ergonomic_test.rs  dual_eval_map_test.rs  dual_eval_stdlib_test.rs  dual_eval_test.rs  dual_eval_types_test.rs  embed_async_otel_test.rs  embed_timeout_reap_test.rs  eval_collections_test.rs  eval_core_test.rs  eval_data_test.rs  eval_io_test.rs  eval_stdlib_test.rs  eval_test.rs  file_async_test.rs  file_runtime_test.rs  fmt_cli_test.rs  fold_callback_async_test.rs  gc_otel_test.rs  gc_stress_test.rs  git_async_test.rs  host_api_test.rs  http_callback_runtime_test.rs  http_concurrent_test.rs  (+70 more)
crates/sema/tests/common/: mod.rs  watchdog.rs
crates/sema/tests/e2e-workflow-view/: workflow-view.spec.ts
crates/sema/tests/suites/: archive_pdf_patch_async_test.rs  dap_async_breakpoint_test.rs  db_async_test.rs  eval_stdlib_test.rs  file_async_test.rs  gc_stress_test.rs  kv_async_test.rs  llm_chat_tools_async_test.rs  llm_fake_test.rs  mcp_async_test.rs  (+7 more)
pkg/: .env.example  Cargo.toml  Dockerfile  Dockerfile.test  README.md
pkg/src/: config.rs  main.rs
pkg/src/api/: admin.rs  github.rs  packages.rs
pkg/src/dal/: admin.rs  audit_log.rs  deps.rs  downloads.rs  mod.rs  owners.rs  packages.rs  reports.rs  sessions.rs  tokens.rs  users.rs  versions.rs
pkg/tests/: integration_test.rs
pkg/tests/common/: mod.rs
(+1750 files in other folders)
