[workspace]
members = [
    "crates/sema-core",
    "crates/sema-reader",
    "crates/sema-eval",
    "crates/sema-llm",
    "crates/sema-stdlib",
    "crates/sema-vm",
    "crates/sema",
    "crates/sema-wasm",
    "crates/sema-fmt",
    "crates/sema-lsp",
    "crates/sema-dap",
    "crates/sema-notebook",
    "crates/sema-mcp",
]
exclude = ["pkg"]
resolver = "2"

[workspace.package]
version = "1.16.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/HelgeSverre/sema"
homepage = "https://sema-lang.com"

[workspace.dependencies]
sema-core = { version = "=1.16.0", path = "crates/sema-core" }
sema-reader = { version = "=1.16.0", path = "crates/sema-reader" }
sema-eval = { version = "=1.16.0", path = "crates/sema-eval" }
sema-llm = { version = "=1.16.0", path = "crates/sema-llm" }
sema-stdlib = { version = "=1.16.0", path = "crates/sema-stdlib" }
sema-vm = { version = "=1.16.0", path = "crates/sema-vm" }
sema-fmt = { version = "=1.16.0", path = "crates/sema-fmt" }
sema-lsp = { version = "=1.16.0", path = "crates/sema-lsp" }
sema-dap = { version = "=1.16.0", path = "crates/sema-dap" }
sema-notebook = { version = "=1.16.0", path = "crates/sema-notebook" }
sema-mcp = { version = "=1.16.0", path = "crates/sema-mcp" }

tower-lsp = "0.20"
dashmap = "6"

regex = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-std", "io-util"] }
reqwest = { version = "0.13", features = ["json", "stream", "blocking", "multipart"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rand = "0.10"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
chrono = "0.4"
csv = "1"
md5 = "0.8"
hmac = "0.12"
hex = "0.4"
lasso = "0.7"
hashbrown = "0.15"
unicode-normalization = "0.1"
glob = "0.3"
hostname = "0.4"
libc = "0.2"
pdf-extract = "0.10"
lopdf = "0.38"
axum = { version = "0.8", features = ["ws"] }
tokio-stream = "0.1"
mime_guess = "2"
toml = "0.8"
toml_edit = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
semver = "1"
tar = "0.4"
flate2 = "1"
gag = "1.0.0"
crc32fast = "1"


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release.package.sema-wasm]
opt-level = "s"
