[package]
name = "sema-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types and environment for the Sema programming language"
readme = "README.md"

[dependencies]
thiserror.workspace = true
serde_json.workspace = true
lasso.workspace = true
hashbrown.workspace = true
toml.workspace = true
crc32fast = "1"
