[package]
name = "sema-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types and environment for the Sema programming language"
readme = "README.md"

[dependencies]
thiserror.workspace = true
serde_json.workspace = true
lasso.workspace = true
hashbrown.workspace = true
toml.workspace = true
crc32fast = "1"
num-bigint = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"
# Wasm32-safe `Instant`/`SystemTime`: a transparent re-export of `std::time` on
# every other target (see the longer comment in sema-vm's Cargo.toml). Needed
# here because `IoExecutor`/`ExecutorLease` (`runtime/executor.rs`) carry an
# `Instant` deadline that sema-vm's runtime module must interoperate with.
web-time = "1.1.0"

[dev-dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"

# Stack-growth for deep recursive value walks + native→VM re-entry (see
# `stack::maybe_grow`). Not available on wasm (no stack growth), so gate it off
# that target; `maybe_grow` is a plain call there.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
stacker = "0.1"
