[package]
name = "sema-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Trampoline-based evaluator and module system for the Sema programming language"
readme = "README.md"

[dependencies]
sema-core.workspace = true
sema-reader.workspace = true
sema-stdlib.workspace = true
sema-vm.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sema-llm.workspace = true
sema-io.workspace = true
