[package]
name = "sema-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Trampoline-based evaluator and module system for the Sema programming language"
readme = "README.md"

[dependencies]
sema-core.workspace = true
sema-reader.workspace = true
sema-stdlib.workspace = true
sema-vm.workspace = true
# Wasm32-safe `Instant` (see the comment in sema-vm's Cargo.toml): the
# persistent-runtime `Drop` teardown below builds a `ShutdownOptions` deadline,
# whose type must match sema-vm's runtime module on every target.
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sema-llm.workspace = true
sema-io.workspace = true
