[package]
name = "sema-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "LLM provider integrations (Anthropic, OpenAI) for the Sema programming language"
readme = "README.md"

[dependencies]
sema-core.workspace = true
sema-io.workspace = true
sema-otel.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures.workspace = true
base64.workspace = true
sha2.workspace = true
