[package]
name = "sema-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP (Model Context Protocol) server for Sema"

[dependencies]
sema-core.workspace = true
sema-eval.workspace = true
sema-vm.workspace = true
sema-fmt.workspace = true
sema-docs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures.workspace = true
oauth2.workspace = true
url.workspace = true
tiny_http.workspace = true
webbrowser.workspace = true
keyring.workspace = true
directories.workspace = true
base64.workspace = true
sha2.workspace = true
rand.workspace = true
chacha20poly1305.workspace = true
sema-notebook.workspace = true
uuid = { workspace = true, features = ["v4"] }
crc32fast.workspace = true
