[package]
name = "sema-notebook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Notebook interface for Sema — cell-based evaluation with HTTP API and browser UI"

[dependencies]
sema-core.workspace = true
sema-eval.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
chrono = { workspace = true, features = ["serde"] }
uuid.workspace = true
