[package]
name = "sema-reader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lexer and s-expression parser for the Sema programming language"
readme = "README.md"

[dependencies]
sema-core.workspace = true
num-bigint = "0.4"

[dev-dependencies]
proptest = "1.10.0"
