[package]
name = "sema-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bytecode compiler and virtual machine for the Sema programming language"
readme = "README.md"

[dependencies]
sema-core.workspace = true
sema-reader.workspace = true
hashbrown.workspace = true
lasso.workspace = true
num-bigint = "0.4"
num-integer = "0.1"
num-rational = "0.4"
