[package]
name = "sema-vm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bytecode compiler and virtual machine for the Sema programming language"
readme = "README.md"

[dependencies]
sema-core.workspace = true
sema-reader.workspace = true
hashbrown.workspace = true
lasso.workspace = true
smallvec.workspace = true
num-bigint = "0.4"
num-integer = "0.1"
num-rational = "0.4"
# Drop-in `std::time::Instant`/`SystemTime` substitute: a transparent re-export
# of `std::time` on every target EXCEPT wasm32, where `std::time::Instant::now()`
# is unimplemented and panics ("time not implemented on this platform") — the
# runtime's clock (`RuntimeClock`/`MonotonicClock`, `DriveState::Idle`'s
# deadlines, every wait/timer comparison in this module) needs a working `now()`
# on wasm32 too, backed here by `Performance.now()`. Used throughout
# `crate::runtime` in place of `std::time::Instant`; `std::time::Duration` is
# left alone (it has no wall-clock syscall and is already wasm-safe).
web-time = "1.1.0"

[dev-dependencies]
divan = "0.1"
sema-eval.workspace = true
sema-stdlib.workspace = true

[[bench]]
name = "runtime_micro"
harness = false
