[package]
name = "sema-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly bindings for the Sema Lisp interpreter"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen.workspace = true
sema-core.workspace = true
sema-reader.workspace = true
sema-eval.workspace = true
sema-fmt.workspace = true
sema-vm.workspace = true
js-sys.workspace = true
getrandom = { workspace = true, features = ["wasm_js"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "js"] }
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "Response",
    "AbortController",
    "AbortSignal",
    "XmlHttpRequest",
] }

[package.metadata.cargo-machete]
# No direct code references — present only to turn on the wasm RNG feature flags
# (getrandom "wasm_js", uuid "js") so uuid v4 works on wasm32. Removing them
# breaks the playground build.
ignored = ["getrandom", "uuid"]
