[package]
name = "sema-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly bindings for the Sema Lisp interpreter"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen.workspace = true
sema-core.workspace = true
sema-reader.workspace = true
sema-eval.workspace = true
sema-fmt.workspace = true
sema-vm.workspace = true
js-sys.workspace = true
getrandom = { workspace = true, features = ["wasm_js"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "js"] }
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Window",
    "WorkerGlobalScope",
    "DedicatedWorkerGlobalScope",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "Response",
    "AbortController",
    "AbortSignal",
    "MessageChannel",
    "MessagePort",
    "MessageEvent",
] }
# Send-safe one-shot completion channel used by the Promise-driven runtime-ABI
# natives (`driver.rs`): a JS callback (fetch `.then`, `setTimeout`) resolves a
# oneshot `Sender` from OUTSIDE the `Send`-bounded external-wait job future;
# the future itself only awaits the `Receiver` (no `JsValue` inside it — those
# aren't `Send`). Already a transitive workspace dependency (`futures`); named
# directly here since only its `channel::oneshot` is used.
futures-channel = "0.3"
# Wasm32-safe `Instant` (see the comment in sema-vm's Cargo.toml) — the
# macrotask driver (`driver.rs`) compares `Instant`s against sema-vm's
# `DriveState::Idle::next_deadline`, so it must use the same substitute.
web-time = "1.1.0"

[package.metadata.cargo-machete]
# No direct code references — present only to turn on the wasm RNG feature flags
# (getrandom "wasm_js", uuid "js") so uuid v4 works on wasm32. Removing them
# breaks the playground build.
ignored = ["getrandom", "uuid"]
