[package]
name = "sema-lang"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Sema — a Lisp dialect with first-class LLM primitives"
readme = "../../README.md"
keywords = ["lisp", "language", "llm", "interpreter", "repl"]
categories = ["compilers", "command-line-utilities"]

[[bin]]
name = "sema"
path = "src/main.rs"

[lib]
name = "sema"
path = "src/lib.rs"

[dependencies]
sema-core.workspace = true
sema-reader.workspace = true
sema-eval.workspace = true
sema-vm.workspace = true
sema-llm.workspace = true
sema-stdlib.workspace = true
sema-fmt.workspace = true
sema-workflow.workspace = true
rusqlite.workspace = true
sema-lsp.workspace = true
sema-dap.workspace = true
sema-docs.workspace = true
sema-notebook.workspace = true
sema-mcp.workspace = true
sema-otel.workspace = true
sema-io.workspace = true
tokio.workspace = true
reedline = "0.48"
nu-ansi-term = "0.50"
crossterm = "0.29"
glob.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde_json.workspace = true
libsui = "0.15"
toml.workspace = true
toml_edit.workspace = true
serde.workspace = true
reqwest.workspace = true
sha2.workspace = true
semver.workspace = true
tar.workspace = true
flate2.workspace = true
crc32fast = "1"
xz2 = "0.1"
zip = { version = "8", default-features = false, features = ["deflate"] }
# Embeds the `sema web` browser runtime (src/web/assets/**) into the binary at
# compile time. `debug-embed` forces embedding in every profile so a build never
# reads the assets from the source tree at runtime — see src/web/runtime.rs.
rust-embed = { version = "8", features = ["debug-embed"] }
self-replace.workspace = true
indicatif.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
paste = "1"
pio = "0.3"
sema-otel = { workspace = true, features = ["testing"] }
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["trace", "testing"] }
reqwest.workspace = true
portable-pty = "0.9"
serde_json.workspace = true
serial_test = "3"
tungstenite = "0.28"
